components/frontend/envs/production/frontend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: fia
spec:
  template:
    spec:
      containers:
        - name: frontend
          image: ghcr.io/fiaisis/frontend@sha256:7561187eedf02604514ccedb68ecaeeb9e5421b8d0021404c6b7d380aa175988
